@@ -1,5 +1,7 @@
 CHANGES
 DSV.pm
+examples/ex1.pl
+examples/ex2.pl
 inc/Module/Install.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
