@@ -1,4 +1,5 @@
 0.04
+- Add examples/ directory.
 
 0.03 (October 16, 2011)
 - Test::Pod not usable in Perl lesser then 5.8.0. Fix this.
